# Game-Engine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  world.txt  worldExample.txt
sources/: ComponentPool.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  StackAllocator.cpp  StackAllocator.h  main.cpp
sources/AStar/: AStar.cpp  AStar.h  AStarNode.h  Grid.cpp  Grid.h
sources/Components/: CollisionColorChanger.cpp  CollisionColorChanger.h  MyComponent.cpp  MyComponent.h  MyTransform.cpp  MyTransform.h  Pathfinder.cpp  Pathfinder.h  PlayerController.cpp  PlayerController.h  RectangleCollider.cpp  RectangleCollider.h  RectangleRenderer.cpp  RectangleRenderer.h
